/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.api.model;

import "src/devtools/common/metrics/stability/model/proto/error_type.proto";

option java_package = "com.google.devtools.mobileharness.api.model.proto";
option java_outer_classname = "Error";

message StackTraceElement {
  option deprecated = true;

  string declaring_class = 1;
  string method_name = 2;
  // Empty if the original file name is null.
  string file_name = 3;
  int32 line_number = 4;
}

message ExceptionSummary {
  option deprecated = true;

  // Required. If the exception is not a MobileHarnessException, it will be
  // BasicErrorId.NON_MH_EXCEPTION.code().
  int32 error_code = 1;
  // Required: Name of the error defined in BasicErrorId.java, InfraErrorId.java
  // and ExtErrorId.java in //jcg/devtools/mobileharness/api/model/error/. If
  // the exception is not a MobileHarnessException, it will be
  // BasicErrorId.NON_MH_EXCEPTION.
  string error_name = 2;
  // Required.
  stability.model.ErrorType error_type = 3;
  // Required.
  string message = 4;
  // Required. The class name of the exception, retrieved via getName() of the
  // class which can be used by ClassLoader.
  string class_name = 5;

  repeated StackTraceElement stack_trace = 6;
}
